<resources>
    <string name="app_name">MusicDiary</string>
    <string name="edit_text_playlist_id">Playlist ID</string>
    <string name="button_search">Search</string>
    <string name="play_track">Play track</string>
    <string name="add_track">Add track</string>
    <string name="diary_entry_date">Date</string>
    <string name="title">Title</string>
    <string name="genre">Genre</string>
    <string name="artist">Artist</string>
    <string name="search_music_by">Search music by:</string>
    <string name="no_results_found">No results found!</string>
    <string name="log_in_with_spotify">Log in with Spotify</string>
    <string name="shared_diary">Shared Diary</string>
    <string name="messages_button_text">Messages</string>
    <string name="your_diary">Your Diary</string>
    <string name="view_profile">View Profile</string>
    <string name="send">Send</string>
    <string name="album_cover">Album cover</string>
    <string name="edit">Edit</string>
    <string name="add_a_new_diary_entry">Add a new diary entry</string>
    <string name="privacy">privacy</string>
    <string name="mood_icon">Mood icon</string>
    <string name="logging_in">Logging in...</string>
    <string name="updating">Updating...</string>
    <string name="enter_a_new_username">Enter a new username</string>
    <string name="save">Save</string>
    <string name="profile_picture">Profile picture</string>
    <string name="edit_username">Edit Username</string>
    <string name="scroll_hint">Scroll Hint</string>
    <string name="come_back_tomorrow">Come back tomorrow to add another entry!</string>
    <string name="this_diary_book_is_empty">This diary book is empty!</string>
    <string name="log_out">Log out</string>
    <string name="music_diary">Music Diary</string>
    <string name="app_icon">App Icon</string>
    <string name="you_can_only_edit_today_s_entry">You can only edit today\'s entry.</string>
    <string-array name="spinner_items">
        <item>None</item>
        <item>I\'m feeling good</item>
        <item>I\'m feeling neutral</item>
        <item>I\'m feeling bad</item>
    </string-array>
</resources>