<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomepageActivity">

    <Button
        android:id="@+id/sharedDiaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startSharedDiaryActivity"
        android:text="@string/shared_diary"
        app:layout_constraintBottom_toTopOf="@+id/receivedDiaryEntries"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourDiaryButton" />

    <Button
        android:id="@+id/viewProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startProfileActivity"
        android:text="@string/view_profile"
        app:layout_constraintBottom_toTopOf="@+id/yourDiaryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/yourDiaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickToDiaryBook"
        android:text="@string/your_diary"
        app:layout_constraintBottom_toTopOf="@+id/sharedDiaryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewProfileButton" />

    <Button
        android:id="@+id/receivedDiaryEntries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startMessagesActivity"
        android:text="@string/messages_button_text"
        app:layout_constraintBottom_toTopOf="@+id/logoutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sharedDiaryButton" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:onClick="logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receivedDiaryEntries" />
</androidx.constraintlayout.widget.ConstraintLayout>